--- a/08-11/style.css
+++ b/08-11/style.css
@@ -119,14 +119,23 @@ main{
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vh;
-    height: 100vh;
-    z-index: 1000;
-    background-color: black;
+    z-index: 100;
+    width: 100%;
+    height: 100%;
+  background-color: black;
+   
 }
 
 .tela-cheia img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+  object-fit: cover;
+}
+
+.questao{
+    display: none;
+}
+
+.ativa{
+    display: flex;
 }
