--- a/Pokedex/css/style.css
+++ b/Pokedex/css/style.css
@@ -1,12 +1,103 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Oxanium', cursive;
-}
+* {
+    margin: 0; 
+    padding: 0; 
+    box-sizing: border-box; 
+    font-family: 'Oxanium', cursive; 
+  }
+  
+  
+  body {
+    text-align: center; 
+    background: linear-gradient(to bottom, #0cffbe, #12f6f2); 
+    min-height: 100vh; 
+  }
+  
+  
+  main {
+    display: inline-block; 
+    margin-top: 2%;
+    padding: 15px;
+    position: relative; 
+  }
+  
+ 
+  .pokedex {
+    width: 100%; 
+    max-width: 425px; 
+  }
+  
+ 
+  .imagem_pokemon {
+    position: absolute; 
+    bottom: 55%; 
+    left: 50%; 
+    transform: translate(-63%, 20%); 
+    height: 18%; 
+  }
+  
 
-body{
-    text-align: center;
-    background: linear-gradient(to bottom, #07d6a5, #024e3c);
-    min-height: 100vh;
-}
+  .dados_pokemon {
+    position: absolute;
+    font-weight: 600;
+    color: #aaa;
+    top: 54.5%;
+    right: 27%;
+    font-size: clamp(8px, 5vw, 25px); 
+  }
+  
+  
+  .nome_pokemon {
+    color: #3a444d; 
+    text-transform: capitalize; 
+  }
+  
+ 
+  .formulario {
+    position: absolute; 
+    width: 65%; 
+    top: 65%; 
+    left: 13.5%; 
+  }
+  
+
+  .campo_busca {
+    width: 100%; 
+    padding: 4%; 
+    outline: none; 
+    border: 2px solid #333; 
+    border-radius: 5px; 
+    font-weight: 600;
+    color: #3a444d;
+    font-size: clamp(8px, 5vw, 1rem); 
+    box-shadow: -3px 4px 0 #888, -5px 7px 0 #333; 
+  }
+  
+
+  .botoes {
+    position: absolute; 
+    bottom: 10%; 
+    left: 50%; 
+    width: 65%; 
+    transform: translate(-57%, 0); 
+    display: flex; 
+    gap: 20px; 
+  }
+  
+
+  .botao {
+    width: 50%; 
+    padding: 4%; 
+    border: 2px solid #000; 
+    border-radius: 5px; 
+    font-size: clamp(8px, 5vw, 1rem); 
+    font-weight: 600; 
+    color: white; 
+    background-color: #444; 
+    box-shadow: -2px 3px 0 #222, -4px 6px 0 #000; 
+  }
+  
+
+  .botao:active {
+    box-shadow: inset -4px 4px 0 #222; 
+    font-size: 0.9rem; 
+  }
